--- a/README.html
+++ b/README.html
@@ -128,10 +128,10 @@ $(document).ready(function () {
 <h1>Unequal Representation of Gender in Film</h1>
 <blockquote>
 <p><em>“I think we have a sexist film industry, and stories about women are largely untold”</em><br />
-- Carey Mulligan, actress</p>
+– Carey Mulligan, actress</p>
 </blockquote>
 <p>For our project, we looked at the prevalent <strong>gender gap</strong> that continues to exist in the cinema. We wanted to really draw attention to the <strong>extreme unequal representation</strong> of genders in film and how that impacts the movie itself. We found an undeniably large difference between the representation of male characters versus the representation of female characters. It is apparent in not only the amount of characters of each gender, but also how many words they get to speak. All of these movies with predominately male leads make an enormous amount of money in comparison to the movies with female leads. However, when you look at the general population’s ratings of movies with male leads versus female leads, you can see there is little difference. <em>Why do filmmakers continue to reinforce this unequal representation of genders and produce an abundant amount of male dominated movies, especially when viewers do not prefer those to movies with female leads?</em></p>
-<p>People like to claim that our society has come a long way in terms of gender equality, and that may be true. But as you can see from our <a href="https://swethagkrish/shinyapps.io/genderrep/">project</a>, we have not come very far; in fact, we still have a very far way to go.</p>
+<p>People like to claim that our society has come a long way in terms of gender equality, and that may be true. But as you can see from our <a href="https://swethagkrish.shinyapps.io/genderrep/">project</a>, we have not come very far; in fact, we still have a very far way to go.</p>
 </div>
 
 
